update code to work with autocomplete-plus 1.1.0

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "fuzzaldrin": "*",
-    "jquery": "*",
-    "autocomplete-plus": "0.22.13"
+    "jquery": "*"
   }
 }
