--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "fuzzaldrin": "*",
     "shelljs": "*",
-    "atom-message-panel": "1.2.0"
+    "atom-message-panel": "1.2.0",
+    "underscore": "1.7.0"
   }
 }
