--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "repository": "https://github.com/mcneel/rhino-python",
   "license": "MIT",
   "engines": {
-    "atom": ">=0.179.0"
+    "atom": ">=0.185.0 <2.0.0"
   },
   "dependencies": {
     "fuzzaldrin": "*",
     "shelljs": "*",
     "atom-message-panel": "1.2.0",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "jquery": "*"
   },
   "providedServices": {
     "autocomplete.provider": {
