--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "atom-message-panel": "1.2.0",
     "underscore": "1.7.0",
     "jquery": "*",
-    "vue": "git+https://git@github.com/yyx990803/vue.git#b3c529992e322daa4c3a486137730078edd22ffd"
+    "vue": "https://github.com/vuejs/vue/commit/b3c529992e322daa4c3a486137730078edd22ffd"
   },
   "providedServices": {
     "autocomplete.provider": {
